# httproto

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  httproto.pro
include/httproto/: httproto.h
src/: httproto.c
tests/: Makefile  httproto-test  main.c  protocols.h
